# rtgs-lab-tools

./: .gitignore  .gitmodules  .mcp.json  CONTRIBUTING.md  LICENSE  MIGRATION_SUMMARY.md  README.md  ai.md  claude.md  config.json  configuration_uid_decoder.py  database_info.md  devices.txt  file_structure.md  gems_sensing_data_visualizer.py  gems_sensing_db_tools_mcp_server.py  get_sensing_data.py  install.sh  issues.md  opencode.json  pyproject.toml  requirements.txt  spec.md  sql_examples.md  test_bbox_roi.json  test_point_roi.json  update_configuration.py
.claude/: settings.local.json
.gemini/: settings.json
.github/.workflows/: update_configuration.yaml
.github/workflows/: daily-device-monitoring.yml  test-install.yml  test.yml  update_configuration.yaml
logs/configuration-updates/: 2025-05-28_21-16-31_config_update.md  2025-05-29_10-05-45_manual_local_config_update.md  2025-05-29_11-18-39_manual_local_config_update.md  2025-05-29_11-39-37_manual_local_config_update.md  2025-05-29_13-12-35_manual_local_guadalupe_test_config_update.md  2025-05-29_15-18-03_github actions_config_update.md
mcp_servers/particle-mcp-server/: .gitignore  README.md  particle.py  pyproject.toml
mcp_servers/particle-mcp-server/endpoints/: devices.py  diagnostics.py  organizations.py  product_firmware.py
mcp_servers/particle-mcp-server/helpers/: api_helpers.py
mcp_servers/particle-mcp-server/resources/: particle_api.json
mcp_servers/rtgs_lab_tools_mcp_server/: gems_sensing_db_tools_mcp_server.py
planet_test_download/09478317-f061-418a-babf-0f49806c394b/: manifest.json
planet_test_download/09478317-f061-418a-babf-0f49806c394b/PSScene/: 20251127_170327_12_2540_3B_AnalyticMS_clip.tif  20251127_170327_12_2540_3B_AnalyticMS_metadata_clip.xml  20251127_170327_12_2540_3B_udm2_clip.tif  20251127_170327_12_2540_metadata.json  20251127_170452_56_24e5_3B_AnalyticMS_clip.tif  20251127_170452_56_24e5_3B_AnalyticMS_metadata_clip.xml  20251127_170452_56_24e5_3B_udm2_clip.tif  20251127_170452_56_24e5_metadata.json
sensing_tools/device_configuration_updater/configurations/: config.json
sensing_tools/device_data_getter/: get_sensing_data.py
sensing_tools/error_code_translator/: error_code_parser.py
sentinel/: notification_system.py
src/rtgs_lab_tools/: __init__.py  cli.py
src/rtgs_lab_tools/audit/: README.md  (+4 more)
tests/: __init__.py  conftest.py  test_cli.py  test_credentials.py  test_database.py  test_file_operations.py
tests/agricultural_modeling/: __init__.py  test_crop_parameters.py  test_growing_degree_days.py
tests/audit/: __init__.py  test_audit_service.py
tests/core/: test_config.py
tests/data_parser/: __init__.py  test_factory.py
tests/device_configuration/: __init__.py  test_uid_decoding.py
tests/device_monitoring/: __init__.py
tests/gridded_data/: __init__.py
tests/sensing_data/: test_data_extractor.py  test_file_operations.py
tests/visualization/: test_data_parser.py  test_data_utils.py  test_time_series.py
(+4023 files in other folders)
